# othello

./: Cargo.toml  param.txt
src/: agent.rs  archive.rs  lib.rs  main.rs  othello_board.rs  train.rs
